tests/sumo/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (1ms).
Loading done.
Simulation version v1_14_1+0775-edc6051 started with time: 0.00.
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.24s
 Real time factor: 2109.7
 UPS: 129881.856540
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 90
 Waiting: 1
Statistics (avg of 332):
 RouteLength: 350.98
 Speed: 7.67
 Duration: 65.88
 WaitingTime: 29.68
 TimeLoss: 47.35
 DepartDelay: 0.69

